solved issue with whitespace, commented out the faulty email form

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body, html {
 	height:100%;
 
@@ -11,6 +12,7 @@ body, html {
 #home {
 	/* .hero-image grand canyon*/
 	background-image: url(http://gdurl.com/tcFQ);
+	background-attachment: fixed;
 
 	height: 100%;
 	max-width: cover;
@@ -18,6 +20,7 @@ body, html {
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
+	padding-top: 50px;
 
 } 
 
@@ -66,6 +69,7 @@ i {
 	background: #cccccc;
 	font-family: 'Quicksand', cursive;
 	font-size: 42px;
+	padding-top: 50px;
 	padding-left: 20px;
 	height: 60%;
 	text-align: center;
@@ -104,6 +108,7 @@ blockquote:after {
 #myPortfolio {
 	background: #cccccc;
 	height: 90%;
+	padding-top: 50px;
 	padding-left: 20px;
 	font-family: 'Quicksand', cursive;
 }
@@ -112,6 +117,8 @@ blockquote:after {
 #contact {
 	/* .hero-image grand canyon*/
 	background-image: url(http://gdurl.com/faUw);
+	background-attachment: fixed;
+
 
 	height: 90%;
 	max-width: cover;
@@ -122,10 +129,9 @@ blockquote:after {
 	padding-bottom: 15%;
 
 }
-.emailForm{
+.getInTouch{
 	
-/*	background: gray;
-*/	font-family: 'Quicksand', cursive;
+	font-family: 'Quicksand', cursive;
 	padding-left: 40%;
 	padding-top: 10%;
 	text-align: left;
